# es-translator

./: .dockerignore  .gitignore  404.html  Dockerfile  LICENSE.md  Makefile  Pipfile  README.md  es_translator.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  setup.py  zensical.toml
.circleci/: config.yml
.github/workflows/: main.yml
api/: index.html
architecture/: index.html
configuration/: index.html
contributing/: index.html
datashare/: index.html
docs/: api.md  architecture.md  configuration.md  contributing.md  datashare.md  index.md  releasing.md  troubleshooting.md  usage.md
docs/stylesheets/: extra.css
docs/superpowers/plans/: 2026-05-18-zensical-migration.md
docs/superpowers/specs/: 2026-05-18-zensical-migration-design.md
es_translator/: __init__.py  alpha.py  apertium.py  apertium_repository.py  cli.py  config.py  es.py  es_translator.py  logger.py  monitor.py  pairs.py  symlink.py  tasks.py  worker.py
es_translator/interpreters/: __init__.py  abstract.py
es_translator/interpreters/apertium/: __init__.py  apertium.py  pairs.py  repository.py
es_translator/interpreters/argos/: __init__.py  argos.py
releasing/: index.html
search/: search_index.json
stylesheets/: extra.css
tests/: cli.py  test_alpha.py  test_apertium.py  test_apertium_repository.py  test_cli.py  test_es.py  test_es_translator.py  test_monitor.py  test_pairs.py
tests/interpreters/apertium/: test_apertium.py  test_apertium_repository.py  test_pairs.py
tests/interpreters/argos/: test_argos.py
troubleshooting/: index.html
usage/: index.html
usr/share/apertium/apertium-en-es/: apertium-en-es.en-es.genitive.t1x  apertium-en-es.en-es.t1x  apertium-en-es.en-es.t2x  apertium-en-es.en-es.t3x  apertium-en-es.es-en.t1x  apertium-en-es.es-en.t2x  apertium-en-es.es-en.t3x  en-es.prob  es-en.prob
usr/share/apertium/modes/: en-es.mode  es-en.mode  es-en_US.mode
usr/share/doc/apertium-en-es/: AUTHORS  README  copyright
