[tool.poetry]
name = "es-translator"
version = "1.7.3"
description = "A lazy yet bulletproof machine translation tool for Elastichsearch."
authors = ["ICIJ <engineering@icij.org>"]
readme = "README.md"
license = "GNU AFFERO GENERAL PUBLIC LICENSE"
packages = [{include = "es_translator"}]

[tool.poetry.dependencies]
python = "^3.8.2,<3.11"
click = "^8"
elasticsearch = ">=7.10,<7.11"
elasticsearch-dsl = ">=7.4.0,<8.0.0"
sh = "^1"
pycountry = "^22.3"
deb-pkg-tools = "^8.4"
coloredlogs = "*"
urllib3 = "^1.26"
argostranslate = "^1.7"
rich = "^12"
torch = "^1.13"
celery = {extras = ["redis"], version = "^5.3.1"}
filelock = "^3.12.2"

[tool.poetry.group.dev.dependencies]
pyyaml = "*"
argh = "*"
pytest = "^7.2"
pytest-mock = "^3.11.1"
mkdocs = "^1.4.3"
mkdocs-material = "^9.1.16"
mkdocstrings-python = "^1.1.2"
mkdocstrings = "^0.22.0"
mkdocs-exclude = "^1.0.2"
mkdocs-minify-plugin = "^0.6.4"
mkdocs-autolinks-plugin = "^0.7.0"
cairosvg = "^2.7.0"

[tool.pytest.ini_options]
filterwarnings = [
    "error",
    "ignore::UserWarning",
    'ignore:pkg_resources is deprecated as an API',
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
    
[tool.poetry.scripts]
es-translator = "es_translator.cli:translate"
es-translator-tasks = "es_translator.cli:tasks"
es-translator-pairs = "es_translator.cli:pairs"
